--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav class="navbar navbar-expand-md bg-body py-3">
         <div class="container"><a class="navbar-brand d-flex" href="#"><span class="bs-icon-sm d-flex justify-content-center align-items-center me-4 bs-icon"><img class="img-fluid" src="https://avatars.githubusercontent.com/u/152988655?v=4" style="border-radius: 50%;"></span>
                 <div class="d-flex justify-content-center align-items-center align-content-center d-md-none">
-                    <div class="pulsating-circle" style="top: 20%;" value="unavailable"></div>
-                    <p style="font-size: 1rem;margin: 0px;padding-left: 10px;"><span style="color: rgb(170, 77, 77);">Not available</span></p>
+                    <div id="pulsating_circle" class="pulsating-circle" style="top: 20%;"></div>
+                    <p style="font-size: 1rem;margin: 0px;padding-left: 10px;"><span id="workStatus" > </span></p>
                 </div>
             </a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
@@ -30,8 +30,8 @@
                         </a><!-- End: full-name -->
                         <!-- Start: work-status --><a class="nav-link" href="#" style="padding: 0px;">
                             <div class="d-flex justify-content-center align-items-center align-content-center content">
-                                <div id="pulsating-circle" class="pulsating-circle" value="unavailable"></div>
-                                <p style="font-size: 1rem;margin: 0px;padding-bottom: 10px;padding-left: 10px;"><span style="color: rgb(170, 77, 77);">Not available</span></p>
+                                <div id="pulsating_circle" class="pulsating-circle"></div>
+                                <p style="font-size: 1rem;margin: 0px;padding-bottom: 10px;padding-left: 10px;"><span id="workStatus" > </span></p>
                             </div>
                         </a><!-- End: work-status -->
                     </li>
@@ -54,20 +54,20 @@
                     </div>
                 </div>
             </div>
-            <div data-aos="fade" data-aos-delay="300" style="position: absolute;left: 85%;top: 80%;"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+            <div data-aos="fade" data-aos-delay="300" style="position: absolute;left: 3%;top: 83%;"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7ZM9 12C9 13.6569 10.3431 15 12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12Z" fill="currentColor"></path>
                         <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="currentColor"></path>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1C2.79086 1 1 2.79086 1 5V19C1 21.2091 2.79086 23 5 23H19C21.2091 23 23 21.2091 23 19V5C23 2.79086 21.2091 1 19 1H5ZM19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3Z" fill="currentColor"></path>
-                    </svg></span><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github">
+                    </svg></span><a href="https://jdevdis.github.io/john-portfolio/"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-                    </svg></span><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><i class="icon ion-ios-email-outline"></i></span></div>
+                    </svg></span></a><span class="bs-icon-sm bs-icon-rounded bs-icon-primary-light d-flex justify-content-center align-items-center m-2 bs-icon"><i class="icon ion-ios-email-outline"></i></span></div>
         </div><!-- End: 1 Row 1 Column -->
     </section><!-- End: hero -->
     <!-- Start: Recent Work -->
-    <section class="d-flex align-items-center" style="background: #f7f7f7;/*height: 100vh;*/padding-top: 80px;padding-bottom: 80px;">
+    <section class="d-flex align-items-center" style="background: #e9e8e8;height: 90vh;padding: 10px;">
         <div class="container">
             <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <div class="col-md-8 col-xl-6 text-start mx-auto">
                     <h2>My Recent Work</h2>
                     <p class="w-lg-50" style="font-size: 0.5em;">Here are a few past design projects I've worked on. Want to see more?&nbsp;<a href="mailto:needaweb95@gmail.com">Email me</a></p>
                 </div>
@@ -88,7 +88,7 @@
                                                     </svg></span></button></div>
                                     </div>
                                     <div class="col-md-9">
-                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding: 20px;"><img class="img-fluid" src="assets/img/itsdc.png?h=105a15306e4ed30df227aadcfa3bd3e2" style="border-radius: 10px;box-shadow: 0px 2px 10px 1px rgb(0,0,0);"></div>
+                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding-bottom: 40px;"><img class="img-fluid" src="assets/img/itsdc.png?h=105a15306e4ed30df227aadcfa3bd3e2" style="border-radius: 1px;box-shadow: 0px 2px 5px 1px rgb(0,0,0);"></div>
                                     </div>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                                                     </svg></span></button></div>
                                     </div>
                                     <div class="col-md-9">
-                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding: 20px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 10px;box-shadow: 0px 2px 10px 1px rgb(0,0,0);"></div>
+                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding-bottom: 40px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 1px;box-shadow: 0px 2px 5px 1px rgb(0,0,0);"></div>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                                                     </svg></span></button></div>
                                     </div>
                                     <div class="col-md-9">
-                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding: 20px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 10px;box-shadow: 0px 2px 10px 1px rgb(0,0,0);"></div>
+                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding-bottom: 40px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 1px;box-shadow: 0px 2px 5px 1px rgb(0,0,0);"></div>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
                                                     </svg></span></button></div>
                                     </div>
                                     <div class="col-md-9">
-                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding: 20px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 10px;box-shadow: 0px 2px 10px 1px rgb(0,0,0);"></div>
+                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding-bottom: 40px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 1px;box-shadow: 0px 2px 5px 1px rgb(0,0,0);"></div>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                                     </svg></span></button></div>
                                     </div>
                                     <div class="col-md-9">
-                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding: 20px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 10px;box-shadow: 0px 2px 10px 1px rgb(0,0,0);"></div>
+                                        <div style="/*width: 80%;*//*box-shadow: 0px 5px 20px 1px rgb(0,0,0);*/padding-bottom: 40px;"><img class="img-fluid" src="assets/img/dp.png?h=e7696946df5767590779ad3eab05f278" style="border-radius: 1px;box-shadow: 0px 2px 5px 1px rgb(0,0,0);"></div>
                                     </div>
                                 </div>
                             </div>
@@ -166,6 +166,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/script.min.js?h=e9987ac57f6f57122be8e387915b67d4"></script>
+    <script>
+
+        /*
+        0 - Not working ( Available - green )
+        1 - Working on a Project ( Unavailable - red )
+        */
+
+        var workingStatusVal = 1;
+
+        var workingStatus = $(workStatus).attr("value", workingStatusVal);
+        var pulsatingCircleStatusVal = "unavailable";
+        function isJohnWorking() {
+            if (workingStatusVal == 0) {
+                $(workStatus).text("Available to work");
+                $(pulsating_circle).attr("value","available");
+            }
+            if(workingStatusVal == 1){
+                $(workStatus).text("Not available");
+                $(pulsating_circle).attr("value","unavailable");
+            }            
+        }
+
+        isJohnWorking();
+      
+    </script>
 </body>
 
 </html>
