--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="col"  id="lovecalc">
                     <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/lovCal.png" />
                         <div class="card-body p-4">
-                            <form method="post" action="index.html#lovecalc" onsubmit="return validateForm()" name="loveCalcForm">
+                            <form method="get" action="index.html#lovecalc" onsubmit="return validateForm()" name="loveCalcForm">
                                 <div class="row">
                                     <div class="col mb-5">
                                         <div class="mb-4" style="font-size: 1rem;color: firebrick;" id="errTxt"></div>
